+Add support for loading installation provided key profiles.
+Add VisualStudio keybindings option (from Vivian).
+Updater is only available if user account running program has access
 permissions to the install directory.
+New version of FileBrowser plugin. (adds search in directory option).
+Add option for extended autocompletion to include results from the simple
completer in with results.

BUG FIXES:
+Fix Launch config not properly being initialized when config panel accessed
from plugin dialog for first time.
+Fix command entry listing of paths (patch from hasan.aljudy).
+Fix autocompletion for when accented characters are in the command string
 (modified patch from roman.chyla).
+Fix some unicode handling issues in search/replace. (patch from roman.chyla)
+Fix number of printout rendering issues.
+Update readonly status when permissions change on disk.
+Fix error in moving a tab from one window to another when the tab was the only
tab left in the window it was moved from. (filebrowser bug).
+Fix condition where saving the session file could potentially potentially be
passed the incorrect type.

#-----------------------------------------------------------------------------#

VERSION 0.4.75
DATE 03/28/2009
24th Alpha Release

NEWS:

This release fixes a handful of important bugs and new features. The Plugin
Manager dialog has been completely reworked. Configuration options for plugins
that provide them are now available in the dialog as well as better error
reporting for plugins that could not properly be loaded.

File session support has also been improved to allow for saving and loading of 
multiple custom sessions. Due to format changes the upgrade will require any
session from previous installations to be overwritten.

NEW: [features/enhancments]
+New Plugin Manager Dialog.
+Improved configuration options for plugins.
+Incompatible plugins are now displayed in PluginManager with message explaining why.
+Some basic autocompletion support for CSS.